--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -112,83 +112,6 @@
     grid-template-rows: repeat(1, 1fr);
   }
 }
-.site-footer {
-  background-color: #0a0d14;
-  color: #cccccc;
-}
-.site-footer .site-name {
-  font-weight: 600;
-  font-size: 2.5em;
-  color: inherit;
-}
-.site-footer .site-name:hover {
-  text-decoration: none;
-}
-.site-footer .footer-logo {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  padding: 48px 0 24px 0;
-  border-bottom: 1px solid #2d323f;
-}
-.site-footer .footer-logo a {
-  display: block;
-}
-.site-footer .footer-logo img {
-  height: 64px;
-  width: 100%;
-}
-.site-footer .footer-content {
-  display: flex;
-  justify-content: space-between;
-  gap: 24px;
-}
-.site-footer .footer-content .footer-item {
-  width: 100%;
-  margin: 24px 0;
-}
-.site-footer .footer-content .footer-item-title {
-  font-size: 22px;
-  font-weight: 600;
-}
-.site-footer .footer-content ul {
-  padding: 0;
-  margin: 0;
-  list-style: none;
-}
-.site-footer .footer-content ul .current-menu-item a {
-  color: var(--jelly-color-primary);
-  font-weight: 600;
-}
-.site-footer .footer-content ul a {
-  color: inherit;
-}
-.site-footer .footer-content ul a:hover {
-  color: var(--jelly-color-primary);
-}
-.site-footer .footer-content .footer-item-hr {
-  width: 50px;
-  height: 3px;
-  display: block;
-  background: var(--jelly-color-primary);
-  margin: 12px 0;
-}
-.site-footer .copyright {
-  margin: 0;
-  border-top: 1px solid #2d323f;
-  padding: 16px 0;
-  width: 100%;
-}
-
-@media screen and (max-width: 767px) {
-  .site-footer .footer-content {
-    flex-direction: column;
-    gap: 0;
-  }
-  .site-footer .footer-content .footer-item {
-    margin: 8px 0;
-  }
-}
 .alignleft {
   float: left;
   margin-right: 1rem;
@@ -281,6 +204,81 @@
   color: var(--jelly-color-description);
 }
 
+.site-footer {
+  background-color: #0a0d14;
+  color: #cccccc;
+}
+.site-footer pad .site-name {
+  font-weight: 600;
+  font-size: 2.5em;
+  color: inherit;
+}
+.site-footer pad .site-name:hover {
+  text-decoration: none;
+}
+.site-footer .footer-logo {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  padding: 64px 0 24px 0;
+  border-bottom: 1px solid #2d323f;
+}
+.site-footer .footer-logo a {
+  display: block;
+}
+.site-footer .footer-logo img {
+  height: 64px;
+  width: 100%;
+}
+.site-footer .footer-content {
+  display: flex;
+  justify-content: space-between;
+  gap: 24px;
+}
+.site-footer .footer-content .footer-item {
+  width: 100%;
+  margin: 24px 0;
+}
+.site-footer .footer-content .footer-item-title {
+  font-size: 22px;
+  color: #fff;
+  font-weight: 600;
+}
+.site-footer .footer-content ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+.site-footer .footer-content ul .current-menu-item a {
+  color: var(--jelly-color-primary);
+  font-weight: 600;
+}
+.site-footer .footer-content ul a {
+  color: inherit;
+}
+.site-footer .footer-content ul a:hover {
+  color: var(--jelly-color-primary);
+}
+.site-footer .copyright {
+  background-color: #141414;
+  border-radius: 6px;
+}
+.site-footer .copyright .copyright-text {
+  color: #fff;
+  font-size: 14px;
+  margin: 0;
+  padding: 16px;
+}
+
+@media screen and (max-width: 767px) {
+  .site-footer .footer-content {
+    flex-direction: column;
+    gap: 0;
+  }
+  .site-footer .footer-content .footer-item {
+    margin: 8px 0;
+  }
+}
 /* 404 页面 */
 .error-page {
   width: 400px;
@@ -341,6 +339,11 @@
 /**
  * 小部件样式
  */
+a.button .ri-icon {
+  font-weight: 400;
+  margin-right: 6px;
+}
+
 /**************************************************/
 /* 站点图标  widgets/site-logo.php */
 /**************************************************/
@@ -420,9 +423,6 @@
 .primary-menu a.button {
   background-color: var(--jelly-color-primary);
   color: var(--jelly-color-white);
-}
-.primary-menu a.button .ri-icon {
-  font-weight: 400;
 }
 .primary-menu .sub-menu {
   display: none;
@@ -510,7 +510,7 @@ form.search-form input {
   display: block;
   border-radius: 50px;
   box-shadow: inset 0 0 0 2px var(--jelly-color-border);
-  z-index: 10000;
+  z-index: 999;
   opacity: 0;
   visibility: hidden;
   transform: translateY(15px);
@@ -954,6 +954,159 @@ nav.breadcrumb .separator {
 }
 
 /**************************************************/
+/* CTA 区块 */
+/**************************************************/
+.wp-block-cta {
+  display: flex;
+  justify-content: space-between;
+  padding: 40px;
+  background-size: cover;
+  background-position: center center;
+  position: relative;
+  color: #fff;
+  box-sizing: border-box;
+  margin: 16px 0;
+}
+.wp-block-cta::before {
+  content: "";
+  position: absolute;
+  z-index: 0;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+.wp-block-cta .wp-block-cta__caption,
+.wp-block-cta .wp-block-cta__button {
+  position: relative;
+  z-index: 1;
+}
+.wp-block-cta .wp-block-cta__caption {
+  flex: 1;
+  margin-right: 30px;
+}
+.wp-block-cta .wp-block-cta__caption h3 {
+  font-size: 2em;
+  margin-bottom: 0.5em;
+  color: #fff;
+}
+.wp-block-cta .wp-block-cta__caption p {
+  font-size: 14px;
+  color: #ccc;
+  margin: 0;
+}
+.wp-block-cta .wp-block-cta__button {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-end;
+}
+
+/**************************************************/
+/* 浮动按钮 */
+/**************************************************/
+.float-buttons {
+  position: fixed;
+  right: 10px;
+  bottom: 15%;
+  z-index: 999;
+}
+.float-buttons .float-button {
+  position: relative;
+  border: 1px solid rgba(0, 0, 0, 0.0509803922);
+  background-color: var(--e-global-color-accent, #2271b1);
+  border-radius: 99px;
+  padding: 10px;
+  display: flex;
+  color: #141414;
+  opacity: 1;
+  transition: all 0.3s ease-in-out;
+  margin-bottom: 8px;
+  font-size: 20px;
+  line-height: 1;
+  color: #fff;
+}
+.float-buttons .float-button:hover {
+  color: #fff;
+  transform: scale(1.2);
+}
+.float-buttons .float-button.whatsapp {
+  background-color: #25d366;
+}
+.float-buttons .float-button.whatsapp:hover {
+  background-color: #103928;
+}
+.float-buttons .float-button.close {
+  cursor: pointer;
+  border: 1px solid #e1e6f0;
+  background-color: #ffffff;
+  color: #141414;
+}
+.float-buttons .float-button.close .ri-icon {
+  transform: rotate(90deg);
+}
+.float-buttons .float-button.close:hover {
+  color: #141414;
+  border-color: #e1e6f0;
+  background-color: #f5f7fc;
+}
+.float-buttons.buttons-close .float-button {
+  transform: translateX(70px);
+  border-color: var(--jelly-color-primary);
+  background: var(--jelly-color-primary);
+  color: #fff;
+}
+.float-buttons.buttons-close .close {
+  transform: translateX(30px);
+  padding-right: 22px;
+  box-shadow: var(--jelly-box-shadow);
+}
+.float-buttons.buttons-close .close .ri-icon {
+  transform: rotate(270deg);
+}
+
+/**************************************************/
+/* 饼干海报 */
+/**************************************************/
+.cookie-banner {
+  width: 100%;
+  z-index: 1000;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  padding: 12px 32px;
+  display: none;
+  align-items: center;
+  justify-content: space-between;
+  background: #fff;
+  box-shadow: var(--jelly-box-shadow);
+  box-sizing: border-box;
+}
+.cookie-banner .cookie-caption {
+  width: 70%;
+}
+.cookie-banner .cookie-caption .cookie-title {
+  font-size: 24px;
+  font-weight: 600;
+  margin: 0 0 8px 0;
+}
+.cookie-banner .cookie-caption .cookie-description {
+  font-size: 14px;
+  color: var(--jelly-color-description);
+  margin: 0;
+}
+.cookie-banner .button-group {
+  display: flex;
+  gap: 8px;
+}
+.cookie-banner .button-group .reject-button {
+  background-color: #fff;
+  border: 1px solid var(--jelly-color-primary);
+  color: var(--jelly-color-primary);
+}
+
+/**************************************************/
 /* 平板端适配 */
 /**************************************************/
 @media screen and (max-width: 1240px) {
@@ -1082,6 +1235,31 @@ nav.breadcrumb .separator {
   }
   .page-banner {
     min-height: 150px;
+  }
+  .wp-block-cta {
+    flex-direction: column;
+  }
+  .wp-block-cta .wp-block-cta__caption {
+    margin-right: 0;
+    margin-bottom: 24px;
+  }
+  .wp-block-cta .wp-block-cta__button {
+    align-items: flex-start;
+  }
+  .cookie-banner {
+    flex-direction: column;
+    padding: 12px 16px;
+  }
+  .cookie-banner .cookie-caption {
+    width: 100%;
+    align-items: flex-start;
+  }
+  .cookie-banner .cookie-caption .cookie-description {
+    margin-bottom: 24px;
+  }
+  .cookie-banner .button-group {
+    width: 100%;
+    justify-content: flex-end;
   }
 }
 /**************************************************/
