--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -118,91 +118,6 @@
         grid-template-rows: repeat(1, 1fr);
     }
 }
-.site-footer {
-    // margin-top: 36px;
-    background-color: #0a0d14;
-    color: #cccccc;
-    .site-name {
-        font-weight: 600;
-        font-size: 2.5em;
-        color: inherit;
-        &:hover {
-            text-decoration: none;
-        }
-    }
-    .footer-logo {
-        width: 100%;
-        display: flex;
-        justify-content: space-between;
-        padding: 48px 0 24px 0;
-        border-bottom: 1px solid #2d323f;
-        a {
-            display: block;
-        }
-        img {
-            height: 64px;
-            width: 100%;
-        }
-    }
-    .footer-content {
-        display: flex;
-        // padding: 48px 0;
-        justify-content: space-between;
-        gap: 24px;
-
-        .footer-item {
-            width: 100%;
-            margin: 24px 0;
-        }
-        .footer-item-title {
-            font-size: 22px;
-            // color: #fff;
-            font-weight: 600;
-        }
-        ul {
-            padding: 0;
-            margin: 0;
-            list-style: none;
-            // color: #b8b8b8;
-            .current-menu-item {
-                a {
-                    color: var(--jelly-color-primary);
-                    font-weight: 600;
-                }
-            }
-            a {
-                color: inherit;
-                &:hover {
-                    color: var(--jelly-color-primary);
-                }
-            }
-        }
-        .footer-item-hr {
-            width: 50px;
-            height: 3px;
-            display: block;
-            background: var(--jelly-color-primary);
-            margin: 12px 0;
-        }
-    }
-    .copyright {
-        margin: 0;
-        border-top: 1px solid #2d323f;
-        padding: 16px 0;
-        width: 100%;
-    }
-}
-@media screen and (max-width: 767px) {
-    .site-footer {
-        .footer-content {
-            flex-direction: column;
-            gap: 0;
-            .footer-item {
-                margin: 8px 0;
-            }
-        }
-    }
-}
 
 
 
@@ -299,6 +214,89 @@
     font-size: 16px;
     color: var(--jelly-color-description);
 }
+.site-footer {
+    // margin-top: 36px;
+    background-color: #0a0d14;
+    color: #cccccc;
+    pad
+    .site-name {
+        font-weight: 600;
+        font-size: 2.5em;
+        color: inherit;
+        &:hover {
+            text-decoration: none;
+        }
+    }
+    .footer-logo {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        padding: 64px 0 24px 0;
+        border-bottom: 1px solid #2d323f;
+        a {
+            display: block;
+        }
+        img {
+            height: 64px;
+            width: 100%;
+        }
+    }
+    .footer-content {
+        display: flex;
+        // padding: 48px 0;
+        justify-content: space-between;
+        gap: 24px;
+
+        .footer-item {
+            width: 100%;
+            margin: 24px 0;
+        }
+        .footer-item-title {
+            font-size: 22px;
+            color: #fff;
+            font-weight: 600;
+        }
+        ul {
+            padding: 0;
+            margin: 0;
+            list-style: none;
+            // color: #b8b8b8;
+            .current-menu-item {
+                a {
+                    color: var(--jelly-color-primary);
+                    font-weight: 600;
+                }
+            }
+            a {
+                color: inherit;
+                &:hover {
+                    color: var(--jelly-color-primary);
+                }
+            }
+        }
+    }
+    .copyright {
+        background-color: #141414;
+        border-radius: 6px;
+        .copyright-text{
+            color: #fff;
+            font-size: 14px;
+            margin: 0;
+            padding: 16px;
+        }
+    }
+}
+@media screen and (max-width: 767px) {
+    .site-footer {
+        .footer-content {
+            flex-direction: column;
+            gap: 0;
+            .footer-item {
+                margin: 8px 0;
+            }
+        }
+    }
+}
 /* 404 页面 */
 .error-page {
     width: 400px;
@@ -371,6 +369,10 @@
 /**
  * 小部件样式
  */
+a.button .ri-icon {
+    font-weight: 400;
+    margin-right: 6px;
+}
 
 /**************************************************/
 /* 站点图标  widgets/site-logo.php */
@@ -455,10 +457,6 @@
         &.button {
             background-color: var(--jelly-color-primary);
             color: var(--jelly-color-white);
-            // width: 100%;
-            .ri-icon {
-                font-weight: 400;
-            }
         }
     }
 
@@ -558,7 +556,7 @@ form.search-form {
     display: block;
     border-radius: 50px;
     box-shadow: inset 0 0 0 2px var(--jelly-color-border);
-    z-index: 10000;
+    z-index: 999;
     opacity: 0;
     visibility: hidden;
     transform: translateY(15px);
@@ -707,7 +705,7 @@ nav.breadcrumb {
     display: flex;
     justify-content: space-between;
     margin: 24px 0;
-    .navigation-title{
+    .navigation-title {
         margin: 0;
         color: inherit;
         font-size: 14px;
@@ -1015,6 +1013,162 @@ nav.breadcrumb {
 }
 
 /**************************************************/
+/* CTA 区块 */
+/**************************************************/
+.wp-block-cta {
+    display: flex;
+    justify-content: space-between;
+    padding: 40px;
+    background-size: cover;
+    background-position: center center;
+    position: relative;
+    color: #fff;
+    box-sizing: border-box;
+    margin: 16px 0;
+    &::before {
+        content: "";
+        position: absolute;
+        z-index: 0;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.7);
+    }
+    .wp-block-cta__caption,
+    .wp-block-cta__button {
+        position: relative;
+        z-index: 1;
+    }
+    .wp-block-cta__caption {
+        flex: 1;
+        margin-right: 30px;
+        h3 {
+            font-size: 2em;
+            margin-bottom: 0.5em;
+            color: #fff;
+        }
+
+        p {
+            font-size: 14px;
+            color: #ccc;
+            margin: 0;
+        }
+    }
+    .wp-block-cta__button {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-end;
+    }
+}
+
+/**************************************************/
+/* 浮动按钮 */
+/**************************************************/
+.float-buttons {
+    position: fixed;
+    right: 10px;
+    bottom: 15%;
+    z-index: 999;
+    .float-button {
+        position: relative;
+        border: 1px solid #0000000d;
+        background-color: var(--e-global-color-accent, #2271b1);
+        border-radius: 99px;
+        padding: 10px;
+        display: flex;
+        color: #141414;
+        opacity: 1;
+        transition: all 0.3s ease-in-out;
+        margin-bottom: 8px;
+        font-size: 20px;
+        line-height: 1;
+        color: #fff;
+        &:hover {
+            color: #fff;
+            transform: scale(1.2);
+        }
+        &.whatsapp {
+            background-color: #25d366;
+            &:hover {
+                background-color: #103928;
+            }
+        }
+        &.close {
+            cursor: pointer;
+            border: 1px solid #e1e6f0;
+            background-color: #ffffff;
+            color: #141414;
+            .ri-icon {
+                transform: rotate(90deg);
+            }
+            &:hover {
+                color: #141414;
+                border-color: #e1e6f0;
+                background-color: #f5f7fc;
+            }
+        }
+    }
+    &.buttons-close {
+        .float-button {
+            transform: translateX(70px);
+            border-color: var(--jelly-color-primary);
+            background: var(--jelly-color-primary);
+            color: #fff;
+        }
+        .close {
+            transform: translateX(30px);
+            padding-right: 22px;
+            box-shadow: var(--jelly-box-shadow);
+            .ri-icon {
+                transform: rotate(270deg);
+            }
+        }
+    }
+}
+
+/**************************************************/
+/* 饼干海报 */
+/**************************************************/
+.cookie-banner {
+    width: 100%;
+    z-index: 1000;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    padding: 12px 32px;
+    display: none;
+    align-items: center;
+    justify-content: space-between;
+    background: #fff;
+    box-shadow: var(--jelly-box-shadow);
+    box-sizing: border-box;
+    .cookie-caption {
+        width: 70%;
+        .cookie-title {
+            font-size: 24px;
+            font-weight: 600;
+            margin: 0 0 8px 0;
+        }
+        .cookie-description {
+            font-size: 14px;
+            color: var(--jelly-color-description);
+            margin: 0;
+        }
+    }
+    .button-group {
+        display: flex;
+        gap: 8px;
+        .reject-button {
+            background-color: #fff;
+            border: 1px solid var(--jelly-color-primary);
+            color: var(--jelly-color-primary);
+        }
+    }
+}
+
+/**************************************************/
 /* 平板端适配 */
 /**************************************************/
 @media screen and (max-width: 1240px) {
@@ -1160,6 +1314,34 @@ nav.breadcrumb {
     }
     .page-banner {
         min-height: 150px;
+    }
+
+    .wp-block-cta {
+        flex-direction: column;
+        .wp-block-cta__caption {
+            margin-right: 0;
+            margin-bottom: 24px;
+        }
+        .wp-block-cta__button {
+            align-items: flex-start;
+        }
+    }
+
+    .cookie-banner {
+        flex-direction: column;
+        padding: 12px 16px;
+        .cookie-caption {
+            width: 100%;
+            align-items: flex-start;
+            .cookie-description {
+                margin-bottom: 24px;
+            }
+        }
+
+        .button-group {
+            width: 100%;
+            justify-content: flex-end;
+        }
     }
 }
 
